fix errors on create subject and chapter
