# Backend/api/controllers/subject_controller.go
@@ -18,22 +18,23 @@ func NewSubjectController(subjectService *services.SubjectService) *SubjectContr
 // CreateSubject godoc
 // @Summary Create a new subject
 // @Description Create a new subject with the provided information
-// @Param userID path integer true "User ID"
-// @Param subject body domain.Subject true "Subject creation information"
+// @Param subject body dtos.CreateSubjectDTO true "Subject creation information"
+// @Param Authorization header string true "Authorization header" default(Bearer )
 // @Tags subjects
 // @Accept json
 // @Produce json
 // @Success 200 {object} dtos.SubjectDTO
 // @Failure 400 {object} dtos.ErrorResponse
-// @Router /subjects/create/{userID} [post]
+// @Router /subjects/create [post]
 func (controller *SubjectController) CreateSubject(ctx *gin.Context) {
-	var subjectDTO *dtos.SubjectDTO
+	userID, _ := ctx.Get("userID")
+	var subjectDTO *dtos.CreateSubjectDTO
 	if err := ctx.ShouldBindJSON(&subjectDTO); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	subject, err := controller.subjectService.CreateSubject(subjectDTO)
+	subject, err := controller.subjectService.CreateSubject(userID.(uint), subjectDTO)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -71,19 +72,19 @@ func (controller *SubjectController) SearchSubjectsByName(ctx *gin.Context) {
 // @Produce json
 // @Success 200 {object} dtos.GenerateSubjectDTO
 // @Failure 400 {object} dtos.ErrorResponse
-// @Router /subjects/roadmap [post]
-func (controller *SubjectController) GenerateRoadMap(ctx *gin.Context) {
-	var GenerateSubjectDTO *dtos.GenerateSubjectDTO
-	if err := ctx.ShouldBindJSON(&GenerateSubjectDTO); err != nil {
-		ctx.JSON(http.StatusBadRequest, map[string]interface{}{"error": err.Error()})
-		return
-	}
+// @Router /subjects/generateSubject [post]
+// func (controller *SubjectController) GenerateRoadMap(ctx *gin.Context) {
+// 	var GenerateSubjectDTO *dtos.GenerateSubjectDTO
+// 	if err := ctx.ShouldBindJSON(&GenerateSubjectDTO); err != nil {
+// 		ctx.JSON(http.StatusBadRequest, map[string]interface{}{"error": err.Error()})
+// 		return
+// 	}
 
-	chapters, lessons, err := controller.subjectService.GenerateRoadMap(GenerateSubjectDTO)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, map[string]interface{}{"error": err.Error()})
-		return
-	}
+// 	chapters, lessons, err := controller.subjectService.GenerateRoadMap(GenerateSubjectDTO)
+// 	if err != nil {
+// 		ctx.JSON(http.StatusInternalServerError, map[string]interface{}{"error": err.Error()})
+// 		return
+// 	}
 
-	ctx.JSON(http.StatusOK, map[string]interface{}{"chapters": chapters, "lessons": lessons})
-}
+// 	ctx.JSON(http.StatusOK, map[string]interface{}{"chapters": chapters, "lessons": lessons})
+// }
