# Backend/application/dtos/chapter/chapter.go
@@ -1,6 +1,9 @@
 package dtos
 
+import "Brilliant/application/dtos/lesson"
+
 type ChapterDTO struct {
-	SubjectID   uint   `json:"id"`
-	ChapterName string `json:"chapterName"`
+	SubjectID   uint             `json:"id"`
+	ChapterName string           `json:"chapterName"`
+	Lessons     []dtos.LessonDTO `json:"lessons"`
 }
