# Backend/application/dtos/subject/create_subject.go
@@ -1,0 +1,6 @@
+package dtos
+
+// SubjectDTO represents a subject for transport between different parts of the application or between the application and clients.
+type CreateSubjectDTO struct {
+	SubjectName string `json:"subjectName"`
+}
