# Backend/docs/swagger.json
@@ -8,6 +8,129 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/chapters": {
+            "post": {
+                "description": "Create a new chapter with the provided information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chapters"
+                ],
+                "summary": "Create a new chapter",
+                "parameters": [
+                    {
+                        "description": "Chapter information",
+                        "name": "chapter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ChapterDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Successfully created the chapter",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/chapters/{chapterID}": {
+            "put": {
+                "description": "Update the information of a chapter by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chapters"
+                ],
+                "summary": "Update a chapter",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Chapter ID",
+                        "name": "chapterID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Chapter information",
+                        "name": "chapter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ChapterDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully updated the chapter",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a chapter by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chapters"
+                ],
+                "summary": "Delete a chapter",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Chapter ID",
+                        "name": "chapterID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully deleted the chapter",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/examprep/generate": {
             "post": {
                 "description": "Generate exam preparation material based on the provided topics and prompt",
@@ -23,6 +146,14 @@
                 "summary": "Generate exam preparation material",
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "Bearer",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Generate exam preparation material criteria",
                         "name": "generateDTO",
                         "in": "body",
@@ -30,14 +161,6 @@
                         "schema": {
                             "$ref": "#/definitions/dtos.GenerateExamPrepDTO"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer",
-                        "description": "Authorization header",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -602,7 +725,7 @@
                 }
             }
         },
-        "/subjects/create/{userID}": {
+        "/subjects/create": {
             "post": {
                 "description": "Create a new subject with the provided information",
                 "consumes": [
@@ -617,20 +740,21 @@
                 "summary": "Create a new subject",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Subject creation information",
                         "name": "subject",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Subject"
+                            "$ref": "#/definitions/dtos.CreateSubjectDTO"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer",
+                        "description": "Authorization header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -638,46 +762,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.SubjectDTO"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/subjects/roadmap": {
-            "post": {
-                "description": "Generate a roadmap for a subject",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "subjects"
-                ],
-                "summary": "Generate a roadmap for a subject",
-                "parameters": [
-                    {
-                        "description": "Subject information",
-                        "name": "subject",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.Subject"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.GenerateSubjectDTO"
                         }
                     },
                     "400": {
@@ -1011,9 +1095,6 @@
         }
     },
     "definitions": {
-        "domain.Subject": {
-            "type": "object"
-        },
         "domain.UserRole": {
             "type": "string",
             "enum": [
@@ -1035,6 +1116,14 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dtos.CreateSubjectDTO": {
+            "type": "object",
+            "properties": {
+                "subjectName": {
+                    "type": "string"
                 }
             }
         },
@@ -1108,29 +1197,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "dtos.GenerateSubjectDTO": {
-            "type": "object",
-            "required": [
-                "chapterId",
-                "subjectId",
-                "subjectName",
-                "userId"
-            ],
-            "properties": {
-                "chapterId": {
-                    "type": "integer"
-                },
-                "subjectId": {
-                    "type": "integer"
-                },
-                "subjectName": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "integer"
                 }
             }
         },
@@ -1226,11 +1292,8 @@
                 "id": {
                     "type": "integer"
                 },
-                "referenceBooksLinks": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "referenceBookLink": {
+                    "type": "string"
                 },
                 "subjectName": {
                     "type": "string"
@@ -1239,6 +1302,7 @@
                     "type": "string"
                 },
                 "userId": {
+                    "description": "The ID of the user who created the subject",
                     "type": "integer"
                 }
             }
